[package]
name = "tcp_stream_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.122"
pcapplusplus-sys = { path = "./pcapplusplus-sys", version = "0.1.0" }
tracing = "0.1.40"

[build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.122"
