[package]
name = "tcp-stream-capture"
version = "0.2.0"
edition = "2021"
license = "Unlicense"
authors = ["Izumi Raine <63145238+IzumiRaine@users.noreply.github.com>"]
repository = "https://github.com/IzumiRaine/tcp-stream-capture"
homepage = "https://github.com/IzumiRaine/tcp-stream-capture"
readme = "README.md"
description = "Capture TCP packets from libpcap and reassemble them into TCP streams."

[dependencies]
cxx = "1.0.122"
pcapplusplus-sys = "0.1.0"
thiserror = "1.0.61"
tracing = "0.1.40"

[build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.122"

[dev-dependencies]
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
