[package]
name = "pcapplusplus-sys"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors = ["Izumi Raine <63145238+IzumiRaine@users.noreply.github.com>"]
repository = "https://github.com/IzumiRaine/tcp-stream-capture"
homepage = "https://github.com/IzumiRaine/tcp-stream-capture"
readme = "README.md"
description = """
Compile PcapPlusPlus and make its library and header files available.
See also https://github.com/seladb/PcapPlusPlus
"""
links = "PcapPlusPlus"

[dependencies]

[build-dependencies]
cmake = "0.1.50"
